apps/base/organisers/readarr/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: readarr-tls
spec:
  entryPoints:
    - websecure
  routes: # TODO Set api with no auth
    - kind: Rule
      match: Host(`readarr.${CLUSTER_DOMAIN}`)
      services:
        - name: readarr
          port: 8787
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system
    # - kind: Rule
    #   match: Host(`readarr.${CLUSTER_DOMAIN}`)  && PathPrefix(`/api`)
    #   services:
    #     - name: readarr
    #       port: 8787
    #   middlewares:
    #     - name: traefik-secure-headers
    #       namespace: kube-system
  tls:
    certResolver: cloudflare
